# modern-workflow

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  light-effects.ioc
.devcontainer/: devcontainer.json
.devcontainer/jlink/: devcontainer-feature.json  install.sh
.devcontainer/lmsc/: devcontainer-feature.json  install.sh
.github/workflows/: iar.yaml
CppUTest/src/CppUTest/: CMakeLists.txt
Drivers/: CMakeLists.txt
EWARM/: CMakeLists.txt  Project.custom_argvars  Project.eww  light-effects-cmake.ewd  light-effects-cmake.ewp  light-effects-cmake.ewt  stm32f429xx_sram.icf
Inc/: led.h  lights.h  main.h  stm32f429ii_aca.h  stm32f4xx_it.h  test_config.h
Src/: CMakeLists.txt  gpio.c  lights.cpp  main.cpp  spi.c  stm32f429ii_aca.c  stm32f4xx_it.c  tim.c
Src/testcode/: CMakeLists.txt  bm_search.cpp  bubble_sort.cpp  linear_search.cpp  list_node.cpp  simple_search.cpp
cmake/: cxarm.cmake  iar-tools.cmake  ielftool.cmake
inc/: stm32f4xx_hal_conf.h
lib/: CMakeLists.txt  bm_search.c  bm_search_test.c  crc16.c  crc16_test.c  crc32.c  crc32_test.c  hello_test.c  linear_search.c  linear_search_test.c  main.c  util.h
src/: CMakeLists.txt  adc.c  dac.c  led.c  lights.c  main.c
